--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "buy-africa",
-  "description": "",
+  "name": "buy-africa-frontend",
+  "description": ".",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
-  "type": "module",
   "author": {
     "name": "Basit Balogun",
     "email": "basitbalogun10@gmail.com",
-    "url": "https://github.com/Basit-Balogun10/buy-africa"
+    "url": "https://github.com/Basit-Balogun10"
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "serve": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -19,13 +19,23 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/qs": "^6.9.15",
+    "aos": "^2.3.4",
+    "axios": "^1.7.2",
+    "qs": "^6.12.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
+    "react-table": "^7.8.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^14.3.1",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -36,15 +46,15 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-tailwindcss": "^3.17.0",
     "happy-dom": "^12.10.3",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.38",
     "prettier": "3.1.1",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.3",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   }
