--- a/package.json
+++ b/package.json
@@ -1,12 +1,51 @@
 {
-  "name": "a2sv",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "BuyAfrica",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.ts",
+    "type": "module",
+    "scripts": {
+        "server": "nodemon --experimental-specifier-resolution=node api/server.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "engines": {
+        "node": ">=18.7.0"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@google/generative-ai": "^0.15.0",
+        "@redis/client": "^1.5.16",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/express": "^4.17.21",
+        "@types/express-session": "^1.18.0",
+        "@types/jsonwebtoken": "^9.0.6",
+        "@types/node": "^20.14.2",
+        "@types/nodemailer": "^6.4.15",
+        "@types/object-hash": "^3.0.6",
+        "@types/pug": "^2.0.10",
+        "@types/uuid": "^10.0.0",
+        "axios": "^1.6.7",
+        "cloudinary": "^2.1.0",
+        "colors": "^1.4.0",
+        "connect-redis": "^7.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "crypto": "^1.0.1",
+        "dotenv": "^16.3.1",
+        "express": "^4.19.2",
+        "express-async-handler": "^1.2.0",
+        "express-session": "^1.18.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.4.3",
+        "nodemailer": "^6.9.13",
+        "nodemailer-express-handlebars": "^6.1.2",
+        "nodemon": "^3.0.2",
+        "object-hash": "^3.0.0",
+        "pug": "^3.0.3",
+        "redis": "^4.6.14",
+        "ts-node": "^10.9.2",
+        "uuid": "^10.0.0"
+    }
 }
